--- a/styles.css
+++ b/styles.css
@@ -844,3 +844,19 @@ mobile view
   font-size: 16px;
   line-height: 30px;
 }
+
+.error {
+  width: 100%;
+  padding: 0;
+
+  font-size: 80%;
+  color: white;
+  background-color: #900;
+  border-radius: 0 0 5px 5px;
+
+  box-sizing: border-box;
+}
+
+.error.active {
+  padding: 0.3em;
+}
